<resources>
    <string name="app_name">SlamStatsApp</string>
    <string name="sugerencies">Sugerencias</string>
    <string name="home">Inicio</string>
    <string name="search">Buscar</string>
    <string name="user">Usuario</string>
    <string name="trophies_title">Premios:</string>
    <string name="position_title">Posición:</string>
    <string name="height_title">Altura:</string>
    <string name="weight_title">Peso:</string>
    <string name="nationality_title">Nacionalidad:</string>
    <string name="tab_item_stats">Estadísticas</string>
    <string name="tab_item_teams">Equipos</string>
    <string name="birth_title">Nacimiento:</string>
    <string name="tab_player_teams">Equipos</string>
    <string name="tab_player_stats">Estadísticas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stats_season">Temporada</string>
    <string name="points_per_game">PPP</string>
    <string name="fouls_per_game">FPP</string>
    <string name="assists_per_game">APP</string>
    <string name="rebounds_per_game">RPP</string>
    <string name="steals_per_game">SPP</string>
    <string name="field_goal">TC</string>
    <string name="free_throw_game">TL</string>
    <string name="blocks_per_game">BLK</string>
    <string name="played_games">PJ</string>
    <string name="three_points_made">3PM</string>
    <string name="three_points_percentage">3PM</string>
    <string name="search_hint">Buscar jugador…</string>
    <string name="player_of_the_day_title">Jugador del dia</string>
    <string name="connection_error">Ha habido un error en la conexión</string>
</resources>