<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.PlayerView.PlayerStats.StatsFragment">

    <HorizontalScrollView
        android:id="@+id/statsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="horizontal"
        android:requiresFadingEdge="horizontal"
        android:fadingEdgeLength="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/statsNames"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/statsName">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/stats_season"
                    android:gravity="center"
                    android:paddingHorizontal="5dp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/played_games"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/points_per_game"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/assists_per_game"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/rebounds_per_game"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/steals_per_game"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/blocks_per_game"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/field_goal"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/free_throw_game"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/three_points_made"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/three_points_made"
                    android:gravity="center"
                    android:paddingHorizontal="8dp"
                    android:layout_weight="1"
                    android:textStyle="bold"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvStats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadingEdge="vertical"
                android:requiresFadingEdge="vertical"
                android:fadingEdgeLength="50dp"/>

        </LinearLayout>

    </HorizontalScrollView>

</LinearLayout>