<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.PlayerView.PlayerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/player_Image"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:text="#34 Giannis Antetokuompo"
            android:background="@color/night_sea_blue"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/blue_sea">

            <TextView
                android:id="@+id/position_titile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/position_title"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_margin="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/height_titile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_title"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_margin="15dp"
                app:layout_constraintTop_toBottomOf="@+id/position_titile"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/nationality_titile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_title"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/height_titile"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="15dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/blue_nba"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trophies_title"
                android:text="@string/trophies_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:textSize="15sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTrophies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/nav_player_tab_layout"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_item_stats"/>

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_item_teams"/>

            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vpPlayer_stats_teams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>



    </LinearLayout>
    

</androidx.core.widget.NestedScrollView>